--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body>
-    <!-- <header>
+    <header>
       <section class="header">
         <div class="container header-wrap">
           <nav class="header-navigation">
@@ -78,9 +78,67 @@
               </a>
             </li>
           </ul>
+          <button class="mob-menu-btn" type="button">
+            <svg class="icon-menu" width="28" height="28">
+              <use href="./img/icons.svg#icon-menu"></use>
+            </svg>
+          </button>
+          <div class="mob-menu is-open">
+            <div class="mob-menu-wrap">
+              <button class="mob-menu-close" type="button">X</button>
+              <nav class="mob-menu-nav">
+                <ul class="mob-list">
+                  <li class="mob-item">
+                    <a href="" class="mob-item-link">Home</a>
+                  </li>
+                  <li class="mob-item">
+                    <a href="" class="mob-item-link">How it’s made?</a>
+                  </li>
+                  <li class="mob-item">
+                    <a href="" class="mob-item-link">Chocolate is loved</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <ul class="mob-nav">
+              <li class="mob-nav-item">
+                <a
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="mob-contact-icon" width="24" height="24">
+                    <use href="./img/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-nav-item">
+                <a
+                  href="https://facebook.com"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="mob-contact-icon" width="24" height="24">
+                    <use href="./img/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-nav-item">
+                <a
+                  href="https://twitter.com"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="mob-contact-icon" width="24" height="24">
+                    <use href="./img/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
-    </header> -->
+    </header>
     <main>
       <section class="hero">
         <div class="container">
@@ -102,6 +160,9 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="about-list">
             <li class="about-item">
+              <svg class="about-icon" width="28" height="28">
+                <use href="./img/icons.svg#icon-chocolate"></use>
+              </svg>
               <h3 class="about-item-title">Unsurpassed taste</h3>
               <p class="about-item-text">
                 Crafted with the finest quality cocoa beans and a dedication to
@@ -111,6 +172,9 @@
               </p>
             </li>
             <li class="about-item">
+              <svg class="about-icon" width="32" height="32">
+                <use href="./img/icons.svg#icon-Coin"></use>
+              </svg>
               <h3 class="about-item-title">Affordable price</h3>
               <p class="about-item-text">
                 Indulge in high-quality chocolate without breaking the bank with
@@ -121,6 +185,9 @@
               </p>
             </li>
             <li class="about-item">
+              <svg class="about-icon" width="32" height="32">
+                <use href="./img/icons.svg#icon-spoon"></use>
+              </svg>
               <h3 class="about-item-title">Own production</h3>
               <p class="about-item-text">
                 We take pride in our own production process, ensuring that every
@@ -146,6 +213,9 @@
           </p>
           <ul class="taste-list">
             <li class="taste-item">
+              <svg class="taste-item-right" width="24" height="24">
+                <use href="./img/icons.svg#icon-right"></use>
+              </svg>
               <img
                 src="./img/milk-chocolate.png"
                 alt="MILK CHOCOLATE"
@@ -156,6 +226,9 @@
               <h3 class="taste-item-title">MILK CHOCOLATE</h3>
             </li>
             <li class="taste-item">
+              <svg class="taste-item-right" width="24" height="24">
+                <use href="./img/icons.svg#icon-right"></use>
+              </svg>
               <img
                 src="./img/milk.png"
                 alt="MILK"
@@ -166,6 +239,9 @@
               <h3 class="taste-item-title">MILK</h3>
             </li>
             <li class="taste-item">
+              <svg class="taste-item-right" width="24" height="24">
+                <use href="./img/icons.svg#icon-right"></use>
+              </svg>
               <img
                 src="./img/nuts.png"
                 alt="NUTS"
@@ -176,6 +252,9 @@
               <h3 class="taste-item-title">NUTS</h3>
             </li>
             <li class="taste-item">
+              <svg class="taste-item-right" width="24" height="24">
+                <use href="./img/icons.svg#icon-right"></use>
+              </svg>
               <img
                 src="./img/sweet-chocolate.png"
                 alt="SEMI - SWEET CHOCOLATE"
@@ -186,6 +265,9 @@
               <h3 class="taste-item-title">SEMI - SWEET CHOCOLATE</h3>
             </li>
             <li class="taste-item">
+              <svg class="taste-item-right" width="24" height="24">
+                <use href="./img/icons.svg#icon-right"></use>
+              </svg>
               <img
                 src="./img/cacao.png"
                 alt="CACAO"
@@ -196,6 +278,9 @@
               <h3 class="taste-item-title">CACAO</h3>
             </li>
             <li class="taste-item">
+              <svg class="taste-item-right" width="24" height="24">
+                <use href="./img/icons.svg#icon-right"></use>
+              </svg>
               <img
                 src="./img/raspberry.png"
                 alt="RASPBERRY"
@@ -206,6 +291,9 @@
               <h3 class="taste-item-title">RASPBERRY</h3>
             </li>
             <li class="taste-item">
+              <svg class="taste-item-right" width="24" height="24">
+                <use href="./img/icons.svg#icon-right"></use>
+              </svg>
               <img
                 src="./img/cocnut-oil.png"
                 alt="COCONUT OIL"
@@ -214,6 +302,19 @@
                 height="160"
               />
               <h3 class="taste-item-title">COCONUT OIL</h3>
+            </li>
+            <li class="taste-item">
+              <svg class="taste-item-right" width="24" height="24">
+                <use href="./img/icons.svg#icon-right"></use>
+              </svg>
+              <img
+                src="./img/vanilla.png"
+                alt="VANILLA"
+                class="taste-item-img"
+                width="214"
+                height="160"
+              />
+              <h3 class="taste-item-title">VANILLA</h3>
             </li>
           </ul>
         </div>
